Replace deprecated constructors
Signed-off-by: Martin Herbst <develop@mherbst.de>